--- a/apps/api/.development.env
+++ b/apps/api/.development.env
@@ -3,7 +3,7 @@ PORT=3000
 # Database
 DB_HOST=localhost
 DB_PORT=5433
-DB_NAME=dev_db
+DB_NAME=dev_negocio_seguro
 DB_USER=dev_user
 DB_PASSWORD=dev_password
 
