--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   db:
     image: postgres:16.0
-    container_name: db
+    container_name: db_dev_negocio_seguro
     restart: always
     environment:
       POSTGRES_DB: dev_negocio_seguro
