--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "export NODE_ENV=development && nest start --watch",
-    "start:debug": "export NODE_ENV=development && nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "export NODE_ENV=production && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
